[project]
name = "spotify-dashboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "spotipy>=2.26.0",
    "streamlit>=1.58.0",
]
